--- a/App.xaml
+++ b/App.xaml
@@ -4,6 +4,11 @@
              xmlns:local="clr-namespace:SnakeApp"
              StartupUri="MainWindow.xaml">
     <Application.Resources>
-         
+         <SolidColorBrush x:Key ="BackgroundColour"> #3B4475</SolidColorBrush>
+         <SolidColorBrush x:Key ="GridBackgroundColour"> #646FA5</SolidColorBrush>
+         <SolidColorBrush x:Key="GridColour"> #4F4867</SolidColorBrush>
+         <SolidColorBrush x:Key="TextColour"> #EBEBEB</SolidColorBrush>
+         <SolidColorBrush x:Key="Overlay"> #7F000000</SolidColorBrush>
+         <FontFamily x:Key="TextFont">Assets/#Droid Sans Mono</FontFamily>
     </Application.Resources>
 </Application>
