--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -5,8 +5,37 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SnakeApp"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800">
+        Title="Snake" Height="500" Width="800"
+            Background="{StaticResource BackgroundColour}"
+            Foreground="{StaticResource TextColour}"
+            FontFamily="{StaticResource TextFont}"
+            WindowStartupLocation="CenterScreen"
+            Icon="/Assets/SnakeAssets/icon.ico">
     <Grid>
+        <Grid.RowDefinitions>
+            <RowDefinition Height ="Auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
 
+        <TextBlock x:Name="ScoreText"
+                              HorizontalAlignment="Center"
+                              VerticalAlignment="Center"
+                              Text="SCORE 0"
+                              FontSize="22"
+                              Margin="10"/>
+
+        <Border x:Name="GridBorder"
+                Grid.Row="1"
+                BorderBrush="{StaticResource GridColour}"
+                BorderThickness="1.5"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center">
+            <UniformGrid x:Name="GameGrid"
+                         Width="400"
+                         Height="400"
+                         Background="{StaticResource GridBackgroundColour}">
+            </UniformGrid>
+
+        </Border>
     </Grid>
 </Window>
