--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -10,7 +10,9 @@
             Foreground="{StaticResource TextColour}"
             FontFamily="{StaticResource TextFont}"
             WindowStartupLocation="CenterScreen"
-            Icon="/Assets/SnakeAssets/icon.ico">
+            Icon="/Assets/icon.ico"
+            Loaded="MainWindow_OnLoaded"
+            KeyDown="MainWindow_OnKeyDown">
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height ="Auto"/>
@@ -29,11 +31,14 @@
                 BorderBrush="{StaticResource GridColour}"
                 BorderThickness="1.5"
                 HorizontalAlignment="Center"
-                VerticalAlignment="Center">
+                VerticalAlignment="Center"
+                RenderOptions.EdgeMode="Aliased">
             <UniformGrid x:Name="GameGrid"
                          Width="400"
                          Height="400"
-                         Background="{StaticResource GridBackgroundColour}">
+                         Background="{StaticResource GridBackgroundColour}"
+                         SnapsToDevicePixels="True"
+                         RenderOptions.BitmapScalingMode="HighQuality">
             </UniformGrid>
 
         </Border>
