--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,41 +6,59 @@
         xmlns:local="clr-namespace:SnakeApp"
         mc:Ignorable="d"
         Title="Snake" Height="500" Width="800"
+        MinWidth="300" MinHeight ="300"
             Background="{StaticResource BackgroundColour}"
             Foreground="{StaticResource TextColour}"
             FontFamily="{StaticResource TextFont}"
             WindowStartupLocation="CenterScreen"
             Icon="/Assets/icon.ico"
-            Loaded="MainWindow_OnLoaded"
+            PreviewKeyDown="Window_PreviewKeyDown"
             KeyDown="MainWindow_OnKeyDown">
-    <Grid>
-        <Grid.RowDefinitions>
-            <RowDefinition Height ="Auto"/>
-            <RowDefinition Height="*"/>
-        </Grid.RowDefinitions>
+    <Viewbox>
+        <Grid>
+            <Grid.RowDefinitions>
+                <RowDefinition Height ="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-        <TextBlock x:Name="ScoreText"
-                              HorizontalAlignment="Center"
-                              VerticalAlignment="Center"
-                              Text="SCORE 0"
-                              FontSize="22"
-                              Margin="10"/>
+            <TextBlock x:Name="ScoreText"
+                       HorizontalAlignment="Center"
+                       VerticalAlignment="Center"
+                       Text="SCORE 0"
+                       FontSize="22"
+                       Margin="10"/>
 
-        <Border x:Name="GridBorder"
-                Grid.Row="1"
-                BorderBrush="{StaticResource GridColour}"
-                BorderThickness="1.5"
-                HorizontalAlignment="Center"
-                VerticalAlignment="Center"
-                RenderOptions.EdgeMode="Aliased">
-            <UniformGrid x:Name="GameGrid"
-                         Width="400"
-                         Height="400"
-                         Background="{StaticResource GridBackgroundColour}"
-                         SnapsToDevicePixels="True"
-                         RenderOptions.BitmapScalingMode="HighQuality">
-            </UniformGrid>
+            <Border x:Name="GridBorder"
+                    Grid.Row="1"
+                    BorderBrush="{StaticResource GridColour}"
+                    BorderThickness="1.5"
+                    HorizontalAlignment="Center"
+                    VerticalAlignment="Center"
+                    RenderOptions.EdgeMode="Aliased"
+                    Margin ="20,0,20,20">
+                <UniformGrid x:Name="GameGrid"
+                             Width="400"
+                             Height="400"
+                             Background="{StaticResource GridBackgroundColour}"
+                             SnapsToDevicePixels="True"
+                             RenderOptions.BitmapScalingMode="HighQuality">
+                </UniformGrid>
+            </Border>
 
-        </Border>
-    </Grid>
+            <Border x:Name="Overlay"
+                    Grid.Row="1"
+                    Background="{StaticResource Overlay}"
+                    Width="{Binding Path=ActualWidth, ElementName=GridBorder}"
+                    Height="{Binding Path = ActualHeight, ElementName=GridBorder}"
+                    Margin="{Binding Path=Margin, ElementName=GridBorder}"
+                    RenderOptions.EdgeMode="Aliased">
+                <TextBlock x:Name="OverlayText"
+                           Text="PRESS ANY KEY TO START"
+                           FontSize="26"
+                           HorizontalAlignment="Center"
+                           VerticalAlignment="Center"
+                           TextWrapping="Wrap"/>
+            </Border>
+        </Grid>
+    </Viewbox>
 </Window>
